src/test-c/test_fail/error/function_as_var.c
int toto(){
    return 0;
}

int main(){
    toto = 1 + 2;
    return toto;
}